fix: progress bar overflow is now hidden

--- a/client/src/components/base/progress/progress-bar.scss
+++ b/client/src/components/base/progress/progress-bar.scss
@@ -4,6 +4,7 @@
 	position: relative;
 	min-width: 10rem;
 	height: 2rem;
+	overflow: hidden;
 	border-radius: 0.5rem;
 	background-color: hsla(0, 0%, 100%, 0.1);
 
